--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Refactored Spoon</title>
+      <link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/x-icon">
       {% block stylesheets %}
       <!-- Bootstrap CSS -->
       <link href="{{ url_for('static', filename='css/bootstrap-5.3.3.min.css') }}" rel="stylesheet">
