--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,25 +1,9 @@
-{% extends "layouts/base.html" %}
+{% extends 'layouts/base.html' %}
+{% import "layouts/bootstrap_wtf.html" as wtf %}
 
 {% block content %}
 <div class="container">
   <h1 class="my-4">{{ _('Sign In') }}</h1>
-  <form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32) }}<br>
-        {% for error in form.username.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32) }}<br>
-        {% for error in form.password.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit() }}</p>
-  </form>
+  {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
